Fixed display for multiple PDFs and video/PDFs, changed CSS to wrap borders around videos not containers

--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@ fieldset {
     margin-bottom: 1.5em;
 }
 
-.item-file {
+.item-file > .video {
     border: 1px solid #bbb;
 }
 
